[dashboard] change 3-9 split to 2-10, add margin to main wrapper to prevent footer overlap on long pages
Former-commit-id: 0acb0aa1fa74e53474b5a8ab10e3a73a6b075e65
Former-commit-id: 2fdf22a6dd3075c2aeb71db7ba889527a23bfe57

--- a/apps/dashboard-app/src/main/js/src/assets/css/shrine.css
+++ b/apps/dashboard-app/src/main/js/src/assets/css/shrine.css
@@ -177,16 +177,17 @@ form a {
 
 footer img {
     margin-left: 10px;
-
+    margin-top: 2px;
 }
 
 footer {
     background-color: rgba(50, 62, 74, 0.48);
     position: fixed;
-    width: 100%;
-    bottom: 0px;
+    bottom: 0;
     left: 0;
-    min-height: 60px;
+    width: 100%;
+    height: 83px;
+    min-height: 83px;
     max-width: 100%;
 }
 
@@ -251,6 +252,7 @@ body {
 
 #wrapper {
     width: 100%;
+    margin-bottom: 83px; /* clearance space for footer at bottom of long page */
 }
 
 .login-wrapper{
